--- a/src/styles/colors.style.css
+++ b/src/styles/colors.style.css
@@ -26,7 +26,11 @@
     --c-gold: rgb(221, 184, 130);
     --c-dark-gold: rgb(205, 129, 53);
 
+    --c-washed-gold: rgb(221, 183, 130);
+    --c-washed-dark-gold: rgb(153, 115, 69);
+
     /* fades */
-    --f-background: linear-gradient(180deg, var(--c-background) 0%, rgb(31, 36, 46) 100%);
+    --f-background: linear-gradient(180deg, var(--c-background) 0%, rgb(31, 36, 46) 100%); /* footer */
+    --f-gold-dark-gold: linear-gradient(180deg, var(--c-washed-gold) 0%, var(--c-washed-dark-gold) 100%); /* e. g. frame --> from gold to dark gold */
 }
 
