--- a/src/styles/text.style.css
+++ b/src/styles/text.style.css
@@ -25,7 +25,11 @@ h1 {
 }
 
 h2 {
-    
+    font-size: 35px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--c-gold);
+    line-height: 35px;
 }
 
 h3 {
