--- a/src/components/frame.component.css
+++ b/src/components/frame.component.css
@@ -1,10 +1,10 @@
 .frame-component {
     display: flex;
-    align-items: center;
     justify-content: center;
     background: var(--f-gold-dark-gold);
     cursor: pointer;
     transition: all 0.15s ease-in-out;
+    height: max-content;
 }
 
 .frame-component:hover {
