feat: trippleBoxComponent added

--- a/src/pages/home.page.css
+++ b/src/pages/home.page.css
@@ -55,3 +55,9 @@
         width: 100%;
     }
 }
+
+#home-page .double-block-text {
+    display: flex;
+    gap: var(--size-l);
+    text-align: justify;
+}
