feat: Final changes for init-version

--- a/src/components/header.component.css
+++ b/src/components/header.component.css
@@ -210,3 +210,7 @@
 .header-component.mobile-visible .to-dashboard {
     background-color: red !important;
 }
+
+.header-component .burger-mobile-title {
+    text-decoration: none !important;
+}
